name:                tagless-staged
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/tagless-staged
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , template-haskell


test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tagless-staged
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/tagless-staged
